# meow-ios

./: .gitignore  PRIVACY.md  README.md  codemagic.yaml  project.yml
App/: Info.plist
App/Resources/en.lproj/: Localizable.strings
App/Resources/zh-Hans.lproj/: Localizable.strings
App/Sources/: AppModel.swift  MeowApp.swift
App/Sources/Services/: AppIPCBridge.swift  MeowAPI.swift  VpnManager.swift
App/Sources/Views/: ConnectionsView.swift  ContentView.swift  GlassCard.swift  GlobalVpnSwitchBar.swift  HomeView.swift  LogsView.swift  ProvidersView.swift  ProxyGroupsView.swift  RulesEditorView.swift  RulesView.swift  SettingsView.swift  SubscriptionsView.swift  TrafficView.swift  UserDiagnosticsView.swift  YamlEditorView.swift
MeowCore/include/: meow_core.h
MeowShared/Sources/MeowModels/: AppGroup.swift  Preferences.swift
MeowShared/Tests/MeowSharedTests/: PreferencesTests.swift
MeowUITests/Screens/: AppShellTests.swift
MeowUITests/Support/: MeowApp.swift
PacketTunnel/: Info.plist
PacketTunnel/Sources/: MWEngineLog.h  MWEngineLog.m  MWPreferences.h  MWPreferences.m  MWTunnelEngine.m  MWTunnelSettings.m  PacketTunnelProvider.m
core/rust/geosite-mrs-builder/: Cargo.toml
core/rust/macos-utun-harness/: Nexitally_Clash-2.yml  ech-test.yaml  ech-tls-mihomo.yaml
docs/: BUILD.md  PRD.md  PROJECT_PLAN.md  TEST_STRATEGY.md  index.html
meow-ios.xcodeproj/: project.pbxproj
metadata/testflight/: beta_app_description.txt
scripts/: README.md  build-adhoc.sh  capture-screenshots.sh  generate-app-icon.sh  upload-testflight.sh
(+27 files in other folders)
